# alltime_athletics_python

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.rst  pyproject.toml
alltime_athletics_python/: __init__.py  app.py  events.py  get_content.py  get_content_urls.py  io.py  main.py  pipes.py
alltime_athletics_python/utils/: logger.py
data/: .gitkeep
dataframes/: alltime_athletics_version_2023-06-06.parquet  alltime_athletics_version_2023-06-17.parquet  alltime_athletics_version_2024-01-25.parquet  alltime_athletics_version_2024-07-09.parquet  latest_alltime_athletics_version.csv  latest_alltime_athletics_version.parquet  latest_version_alltime_athletics.csv  wr.csv
notebooks/: main.ipynb
notebooks/output/: .gitkeep
tests/: __init__.py  test_alltime_athletics_python.py
