[tool.poetry]
name = "alltime_athletics_python"
version = "1.20230617.1"
description = "Scrapes and post-processes data from Alltime Athletics (website by Peter Larsson)"
homepage= "https://github.com/thomascamminady/alltime_athletics_python"
authors = ["Thomas Camminady <0milieux_member@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
lxml = "^4.9.2"
html5lib = "^1.1"
rich = "^13.4.1"
polars = "^0.18.0"
ipywidgets = "^8.0.6"
pyarrow = "^12.0.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
ruff = "^0.0.253"
black = "^23.1.0"
pyclean = "^2.2.0"
pre-commit = "^3.1.1"
ipykernel = "^6.16.1"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
rich = "^13.3.2"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = [
  "D100",
  "D101",
  "D103",
  "D104",
  "D401",
  "E501",
]
line-length = 80
select = [
    "B",
    "B9",
    "C",
    "D",
    "E",
    "F",
    "N",
    "S",
    "W",
    "I001",
]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
